fixed contrast fullscreen on markdown option

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,6 +49,10 @@ nav.sidebar, .main{
 }
 .markdown{
   padding: 30px 30px 30px 30px;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  margin: 0;
 }
 
 @media (min-width: 765px) {
